--- a/Resources/Images.resx
+++ b/Resources/Images.resx
@@ -519,4 +519,20 @@
         XKu3iTajSIRs+2CCiDJHNji0B9pp2ELkENuTJv6RHTS39QccsdpfHb2cUQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="gear" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAACHElEQVQ4T6WQT4gScRTHf66K
+        iB30YlEpEcoSaiwjhFMHYWGR1IP/7uEpIjoFQlEdFmIJOhRrpy4t1N538ZRtC5vMgiPoOpIt2WYybot3
+        Cby83nfIYRaCDg18eI/v+36/MyqISPwPRjidTotsNivy+bwoFArGLJVKMnP7D7L1Bi8yyJ4qyOVy19l4
+        h+cFzNlsRtPplKwaPH8tyGQyNyqVyovJZELlcvkhm+4eH48JYIeGGzzwnvqCVColmHvD4ZBUtUnjsU61
+        Wu2rrusEsA8GA+MGD7zImD9BlmWRTCYvFovFJwcHHep02nR09I1Gox8G2KHhBg+8yJgFiUQiycJ9sLHx
+        ZtDrabS5+a4fjUZfAezQcJv7kDELJEmqtFoq7e5+pP19hbrdLsViV9fsdrsA2KHhBg+8yJgFkUjkQaPR
+        oHq9Tpia9pmWlqRVm80mAHZoVg8yZkE4HF4JhUKPwPp69Xu73aPt7Q/tePzaY4AdGm5zHzJmQTAYFIFA
+        4JIkxZ8rSot2dj7R4aFOJye/DLBDww0eeJExC/x+v2BWFaVDW1vvaW+vRdXq62Gz2SOAHRpu8MCLjFng
+        8/kEc3N5eeWtqn6hxcUrL71e71NF0TigEXZouMEDLzJmgeDH4XAIt9ud9ng8ay6X6zJmv/+T/9ARWTV4
+        4MVjLYBylokwceB0Om9x0TOAfa7zjDHn8E5rwQILZxg/c/4f4EXwLqDgN4SU6ia8nlT3AAAAAElFTkSu
+        QmCC
+</value>
+  </data>
 </root>
